tests/ui/type_mismatch.stderr
error: proc macro panicked
 --> $DIR/type_mismatch.rs:1:1
  |
1 | / duchess::java_package! {
2 | |
3 | |     package java.lang;
4 | |
... |
8 | |     }
9 | | }
  | |_^
  |
  = help: message: generic type parameter `Id { data: "bool" }` not among in-scope parameters: []

error: aborting due to previous error

